--- a/server/.env.example
+++ b/server/.env.example
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/lms
+MONGO_URI=mongodb+srv://kmanthugowda:Manthu%40420@nodereactdemo.veoscsu.mongodb.net/
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
 JWT_EXPIRES_IN=1d
 MAIL_HOST=smtp.ethereal.email
