--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,6 @@
     "framer-motion": "^10.16.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "recharts": "^3.2.1"
   },
@@ -24,10 +23,14 @@
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^8.55.0",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "postcss": "^8.5.6",
+    "sass": "^1.93.1",
+    "tailwindcss": "^3.4.17",
     "vite": "^5.0.8"
   }
 }
